--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,8 @@
             "email": "drew@phenocode.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "psr-4": {
+        "Decouple\\DBAL_CLI\\": ""
+    }
 }
