--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,11 @@
         }
     ],
     "require": {},
-    "psr-4": {
-        "Decouple\\DBAL_CLI\\Command\\": "Command/",
-        "Decouple\\DBAL_CLI\\Contract\\": "Contract/",
-        "Decouple\\DBAL_CLI\\": ""
+    "autoload": {
+      "psr-4": {
+          "Decouple\\DBAL_CLI\\Command\\": "Command/",
+          "Decouple\\DBAL_CLI\\Contract\\": "Contract/",
+          "Decouple\\DBAL_CLI\\": ""
+      }
     }
 }
